Updated to fix overlap issues with dropdown

--- a/team_project/css/index.css
+++ b/team_project/css/index.css
@@ -111,7 +111,9 @@
   opacity: 0.7;
 }*/
 /*Carousel styling*/
-* {box-sizing:border-box}
+* {box-sizing:
+  border-box
+}
 
 /*Image sizing*/
 .imgss {
@@ -125,6 +127,8 @@
   position: relative;
   margin: auto;
   align-content: center;
+  z-index: 1;
+  pointer-events: auto;
 }
 
 /* Hide the images by default */
@@ -146,6 +150,7 @@
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  z-index: 1;
 }
 
 /* Position the "next button" to the right */
